# FastApiSelfLive

./: README.md  pyproject.toml
src/fastapilive/: main.py  mainGET.py  mainPOST.py  mainPOST_PUT.py  mainVALIDATE.py
